basic methods for zk utils

--- a/config/consumer.properties
+++ b/config/consumer.properties
@@ -19,7 +19,7 @@ zookeeper.connect=127.0.0.1:2181
 zookeeper.connection.timeout.ms=6000
 
 #consumer group id
-group.id=test-consumer-group
+group.id=go-consumer-group
 
 #consumer timeout
 #consumer.timeout.ms=5000
