--- a/consumers/consumers.properties
+++ b/consumers/consumers.properties
@@ -3,24 +3,25 @@ ClientId=go-consumer
 ConsumerIdPattern=stress-consumer-%d
 GroupId=stress-test-group
 NumConsumers=3
+Topic=test
 
 #Zookeeper connection settings
 ZookeeperConnect=localhost:2181
-ZookeeperTimeout=1
+ZookeeperTimeout=1s
 
 #Workers settings
 NumWorkers=2
 MaxWorkerRetries=3
-WorkerBackoff=500
+WorkerBackoff=500ms
 WorkerRetryThreshold=100
-WorkerConsideredFailedTimeWindow=500
-WorkerBatchTimeout=5
-WorkerTaskTimeout=1
-WorkerManagersStopTimeout=1
+WorkerConsideredFailedTimeWindow=500ms
+WorkerBatchTimeout=5m
+WorkerTaskTimeout=1m
+WorkerManagersStopTimeout=1m
 
 #Rebalance settings
 RebalanceMaxRetries=4
-RebalanceBackoff=5
+RebalanceBackoff=5s
 PartitionAssignmentStrategy=range
 ExcludeInternalTopics=true
 
@@ -29,12 +30,12 @@ NumConsumerFetchers=3
 FetchBatchSize=100
 FetchMessageMaxBytes=5242880
 FetchMinBytes=1
-FetchBatchTimeout=5
+FetchBatchTimeout=5s
 RequeueAskNextBackoff=1
 FetchWaitMaxMs=100
-SocketTimeout=30
+SocketTimeout=30s
 QueuedMaxMessages=3
-RefreshLeaderBackoff=200
+RefreshLeaderBackoff=200ms
 StepsAhead=3
 
 #Offsets settings
@@ -44,4 +45,4 @@ OffsetsCommitMaxRetries=5
 
 #Metrics
 GraphiteConnect=localhost:2003
-FlushInterval=10
+FlushInterval=10s
