--- a/producers/producers.properties
+++ b/producers/producers.properties
@@ -1,31 +1,5 @@
-GroupId=stress-test
-SocketTimeoutMs=
-FetchMessageMaxBytes=
-NumConsumerFetchers=
-QueuedMaxMessages=
-RebalanceMaxRetries=
-FetchMinBytes=
-FetchWaitMaxMs=
-RebalanceBackoffMs=
-RefreshLeaderBackoff=
-OffsetsCommitMaxRetries=
-OffsetsStorage=
-AutoOffsetReset=
-ClientId=
-ConsumerId=
-ExcludeInternalTopics=
-PartitionAssignmentStrategy=
-ZookeeperConnect=
-ZookeeperTimeout=
-NumWorkers=
-MaxWorkerRetries=
-WorkerRetryThreshold=
-WorkerConsideredFailedTimeWindow=
-WorkerFailureCallback=
-WorkerFailedAttemptCallback=
-WorkerCloseTimeout=
-WorkerTaskTimeout=
-WorkerBackoff=
-WorkerBatchTimeout=
-FetchBatchSize=
-FetchBatchTimeout=
+zookeeper_connect=192.168.86.5:2181
+broker_connect=192.168.86.10:9092
+sleep_time=10ms
+topic=test
+num_partitions=6
