switched consumers config case to underscore style

--- a/consumers/consumers.properties
+++ b/consumers/consumers.properties
@@ -1,48 +1,48 @@
 #Consumer identity
-ClientId=go-consumer
-ConsumerIdPattern=stress-consumer-%d
-GroupId=stress-test-group
-NumConsumers=3
-Topic=test
+client_id=go-consumer
+consumer_id_pattern=stress-consumer-%d
+group_id=stress-test-group
+num_consumers=3
+topic=test
 
 #Zookeeper connection settings
-ZookeeperConnect=localhost:2181
-ZookeeperTimeout=1s
+zookeeper_connect=localhost:2181
+zookeeper_timeout=1s
 
-#Workers settings
-NumWorkers=2
-MaxWorkerRetries=3
-WorkerBackoff=500ms
-WorkerRetryThreshold=100
-WorkerConsideredFailedTimeWindow=500ms
-WorkerBatchTimeout=5m
-WorkerTaskTimeout=1m
-WorkerManagersStopTimeout=1m
+#workers settings
+num_workers=2
+max_worker_retries=3
+worker_backoff=500ms
+worker_retry_threshold=100
+worker_considered_failed_time_window=500ms
+worker_batch_timeout=5m
+worker_task_timeout=1m
+worker_managers_stop_timeout=1m
 
 #Rebalance settings
-RebalanceMaxRetries=4
-RebalanceBackoff=5s
-PartitionAssignmentStrategy=range
-ExcludeInternalTopics=true
+rebalance_max_retries=4
+rebalance_backoff=5s
+partition_assignment_strategy=range
+exclude_internal_topics=true
 
 #Fetcher settings
-NumConsumerFetchers=3
-FetchBatchSize=100
-FetchMessageMaxBytes=5242880
-FetchMinBytes=1
-FetchBatchTimeout=5s
-RequeueAskNextBackoff=1
-FetchWaitMaxMs=100
-SocketTimeout=30s
-QueuedMaxMessages=3
-RefreshLeaderBackoff=200ms
-StepsAhead=3
+num_consumer_fetchers=3
+fetch_batch_size=100
+fetch_message_max_bytes=5242880
+fetch_min_bytes=1
+fetch_batch_timeout=5s
+requeue_ask_next_backoff=1
+fetch_wait_max_ms=100
+socket_timeout=30s
+queued_max_messages=3
+refresh_leader_backoff=200ms
+steps_ahead=3
 
 #Offsets settings
-OffsetsStorage=zookeeper
-AutoOffsetReset=largest
-OffsetsCommitMaxRetries=5
+offsets_storage=zookeeper
+auto_offset_reset=largest
+offsets_commit_max_retries=5
 
 #Metrics
-GraphiteConnect=localhost:2003
-FlushInterval=10s
+graphite_connect=localhost:2003
+flush_interval=10s
