fixed consumers tester bug

--- a/consumers/consumers.properties
+++ b/consumers/consumers.properties
@@ -2,11 +2,11 @@
 client_id=go-consumer
 consumer_id_pattern=stress-consumer-%d
 group_id=stress-test-group
-num_consumers=3
-topic=test
+num_consumers=2
+topic=test-1735
 
 #Zookeeper connection settings
-zookeeper_connect=localhost:2181
+zookeeper_connect=192.168.86.5:2181
 zookeeper_timeout=1s
 
 #workers settings
@@ -27,7 +27,7 @@ exclude_internal_topics=true
 
 #Fetcher settings
 num_consumer_fetchers=3
-fetch_batch_size=100
+fetch_batch_size=2000
 fetch_message_max_bytes=5242880
 fetch_min_bytes=1
 fetch_batch_timeout=5s
@@ -40,9 +40,9 @@ steps_ahead=3
 
 #Offsets settings
 offsets_storage=zookeeper
-auto_offset_reset=largest
+auto_offset_reset=smallest
 offsets_commit_max_retries=5
 
 #Metrics
-graphite_connect=localhost:2003
+graphite_connect=127.0.0.1:2003
 flush_interval=10s
