--- a/consumers/consumers.properties
+++ b/consumers/consumers.properties
@@ -36,6 +36,8 @@ fetch_wait_max_ms=100
 socket_timeout=30s
 queued_max_messages=3
 refresh_leader_backoff=200ms
+fetch_metadata_retries=3
+fetch_metadata_backoff=500ms
 
 #Offsets settings
 offsets_storage=zookeeper
