--- a/producers/producers.properties
+++ b/producers/producers.properties
@@ -1,5 +1,9 @@
 zookeeper_connect=192.168.86.5:2181
 broker_connect=192.168.86.10:9092
 sleep_time=0ms
-topic=test-1824
+topic=test-1149
 num_partitions=6
+
+#Metrics
+graphite_connect=127.0.0.1:2003
+flush_interval=10s
