futzing with the sarama NewProducer

--- a/consumers/consumers.properties
+++ b/consumers/consumers.properties
@@ -3,10 +3,10 @@ client_id=go-consumer
 consumer_id_pattern=stress-consumer-%d
 group_id=stress-test-group
 num_consumers=2
-topic=test-1149
+topic=test-1208
 
 #Zookeeper connection settings
-zookeeper_connect=192.168.86.5:2181
+zookeeper_connect=localhost:2181
 zookeeper_timeout=1s
 
 #workers settings
