--- a/producers/producers.properties
+++ b/producers/producers.properties
@@ -1,7 +1,7 @@
-zookeeper_connect=192.168.86.5:2181
-broker_connect=192.168.86.10:9092
+zookeeper_connect=localhost:2181
+broker_connect=localhost:9092
 sleep_time=0ms
-topic=test-1207
+topic=test-1208
 num_partitions=6
 
 #Metrics
