configs moved to props

--- a/producers/producers.properties
+++ b/producers/producers.properties
@@ -3,6 +3,9 @@ broker_connect=localhost:9092
 sleep_time=0ms
 topic=test-1208
 num_partitions=6
+flush_msg_count=5000
+flush_frequency=100ms
+producer_count=4
 
 #Metrics
 graphite_connect=127.0.0.1:2003
