maxMessagesPerReq to cap batches

--- a/producers/producers.properties
+++ b/producers/producers.properties
@@ -4,6 +4,7 @@ sleep_time=0ms
 topic=test-1210
 num_partitions=10
 flush_msg_count=8000
+max_messages_per_req=1
 flush_frequency=300ms
 producer_count=3
 
