send timeout needed for required acks

--- a/producers/producers.properties
+++ b/producers/producers.properties
@@ -1,5 +1,5 @@
-zookeeper_connect=localhost:2181
-broker_connect=localhost:9092
+zookeeper_connect=10.218.189.234:2181
+broker_connect=10.169.52.177:9092
 sleep_time=0ms
 topic=test-1210
 num_partitions=10
