--- a/consumers/consumers.properties
+++ b/consumers/consumers.properties
@@ -1,12 +1,11 @@
 #Consumer identity
 client_id=go-consumer
-consumer_id_pattern=stress-consumer-%d
 group_id=stress-test-group
-num_consumers=2
-topic=test-1149
+num_consumers=1
+topic=test-1207
 
 #Zookeeper connection settings
-zookeeper_connect=192.168.86.5:2181
+zookeeper_connect=localhost:2181
 zookeeper_timeout=1s
 
 #workers settings
@@ -44,6 +43,9 @@ offsets_storage=zookeeper
 auto_offset_reset=smallest
 offsets_commit_max_retries=5
 
+#Deployment
+deployment_timeout=30s
+
 #Metrics
-graphite_connect=127.0.0.1:2003
+graphite_connect=
 flush_interval=10s
