--- a/syslog/Dockerfile
+++ b/syslog/Dockerfile
@@ -13,33 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-FROM stealthly/docker-java
+FROM golang:1.4
 
 MAINTAINER stealthly
-
-#Kafka settings
-ENV KAFKA_VERSION 0.8.2-beta
-ENV SCALA_VERSION 2.10
-ENV KAFKA_RELEASE kafka_$SCALA_VERSION-$KAFKA_VERSION
-ENV KAFKA_URL https://archive.apache.org/dist/kafka/$KAFKA_VERSION/$KAFKA_RELEASE.tgz
-ENV KAFKA_PATH /opt/$KAFKA_RELEASE
-ENV BROKER_ID 1
-ENV HOST_IP localhost
-ENV PORT 9092
-
-#Zookeeper settings
-ENV ZK_VERSION 3.4.6
-ENV ZK_RELEASE zookeeper-$ZK_VERSION
-ENV ZK_URL http://apache.ip-connect.vn.ua/zookeeper/zookeeper-$ZK_VERSION/$ZK_RELEASE.tar.gz
-ENV ZK_HOME /opt/$ZK_RELEASE
-
-#Go settings
-ENV GOLANG_VERSION 1.4
-ENV GOLANG_RELEASE go$GOLANG_VERSION
-ENV GOLANG_URL https://storage.googleapis.com/golang/go$GOLANG_VERSION.linux-amd64.tar.gz
-ENV GOROOT /usr/bin/go
-ENV GOPATH /
-ENV PATH $GOROOT/bin:$PATH
 
 #Syslog defaults
 ENV FORMAT rfc5424
@@ -50,32 +26,13 @@ ENV QUEUE_SIZE 10000
 ENV LOG_LEVEL info
 ENV MAX_PROCS 0
 
-#Get git and mercurial
-RUN sudo apt-get update
-RUN sudo apt-get -y install git
-RUN sudo apt-get -y install mercurial
-#Get Kafka
-RUN wget -q $KAFKA_URL -O /tmp/$KAFKA_RELEASE.tgz
-RUN tar xfz /tmp/$KAFKA_RELEASE.tgz -C /opt
-#Get Zookeeper
-RUN wget -q $ZK_URL -O /tmp/$ZK_RELEASE.tar.gz
-RUN tar -xzf /tmp/$ZK_RELEASE.tar.gz -C /opt
-RUN cp $ZK_HOME/conf/zoo_sample.cfg $ZK_HOME/conf/zoo.cfg
-#Get Go
-RUN wget -q $GOLANG_URL -O /tmp/$GOLANG_RELEASE.tar.gz
-RUN tar -xzf /tmp/$GOLANG_RELEASE.tar.gz -C /usr/bin
-RUN mkdir -p $GOPATH/src
 #Get GPM
 RUN git clone https://github.com/pote/gpm.git && cd gpm && git checkout v1.3.1 && ./configure && make install
 RUN go get github.com/stealthly/go_kafka_client && cd $GOPATH/src/github.com/stealthly/go_kafka_client && git checkout syslog && gpm install
 RUN cd $GOPATH/src/github.com/stealthly/go_kafka_client/syslog && go build
-RUN $GOPATH/src/github.com/stealthly/go_kafka_client/vagrant/kafka.sh
-
-EXPOSE 9092
-EXPOSE 2181
 
 #Adding startup script
 ADD syslog /usr/bin/syslog
 
-#Run tests
+#Run server
 CMD syslog --producer.config $PRODUCER_CONFIG --topic $TOPIC --format $FORMAT --tcp.port $TCP_PORT --tcp.host $TCP_HOST --num.producers $NUM_PRODUCERS --queue.size $QUEUE_SIZE --log.level $LOG_LEVEL --max.procs $MAX_PROCS
