message buffer bug fix, added config entry for consumers

--- a/consumers/consumers.properties
+++ b/consumers/consumers.properties
@@ -2,14 +2,14 @@
 client_id=go-consumer
 group_id=stress-test-group
 num_consumers=1
-topic=test-1207
+topic=state
 
 #Zookeeper connection settings
 zookeeper_connect=localhost:2181
 zookeeper_timeout=1s
 
 #workers settings
-num_workers=2
+num_workers=1
 max_worker_retries=3
 worker_backoff=500ms
 worker_retry_threshold=100
@@ -19,13 +19,14 @@ worker_task_timeout=1m
 worker_managers_stop_timeout=1m
 
 #Rebalance settings
+rebalance_barrier_timeout=10s
 rebalance_max_retries=4
 rebalance_backoff=5s
 partition_assignment_strategy=range
 exclude_internal_topics=true
 
 #Fetcher settings
-num_consumer_fetchers=3
+num_consumer_fetchers=1
 fetch_batch_size=1000
 fetch_message_max_bytes=5242880
 fetch_min_bytes=1
@@ -44,7 +45,7 @@ auto_offset_reset=smallest
 offsets_commit_max_retries=5
 
 #Deployment
-deployment_timeout=30s
+deployment_timeout=0s
 
 #Metrics
 graphite_connect=
