--- a/.travis.yml
+++ b/.travis.yml
@@ -35,14 +35,14 @@ before_install:
 - export REGISTRY_VERSION=1.0
 - export SCALA_VERSION=2.10.4
 - export REGISTRY_URL=http://packages.confluent.io/archive/$REGISTRY_VERSION/confluent-$REGISTRY_VERSION-$SCALA_VERSION.tar.gz
-- export REGISTRY_HOME=/opt/confluent-$REGISTRY_VERSION
+- export REGISTRY_HOME=/tmp/confluent-$REGISTRY_VERSION
 - wget -q $KAFKA_URL -O /tmp/$KAFKA_RELEASE.tgz
 - tar xfz /tmp/$KAFKA_RELEASE.tgz -C /tmp
 - wget -q $ZK_URL -O /tmp/$ZK_RELEASE.tar.gz
 - tar -xzf /tmp/$ZK_RELEASE.tar.gz -C /tmp
 - cp $ZK_HOME/conf/zoo_sample.cfg $ZK_HOME/conf/zoo.cfg
 - wget -q $REGISTRY_URL -O /tmp/confluent-$REGISTRY_VERSION-$SCALA_VERSION.tgz
-- tar xfz /tmp/confluent-$REGISTRY_VERSION-$SCALA_VERSION.tgz -C /opt
+- tar xfz /tmp/confluent-$REGISTRY_VERSION-$SCALA_VERSION.tgz -C /tmp
 - git clone https://github.com/pote/gpm.git 
 - cd gpm
 - git checkout v1.3.1 
