added stopping the schema registry for travis. re #17

--- a/.travis.yml
+++ b/.travis.yml
@@ -62,3 +62,4 @@ before_install:
 after_script:
 - $KAFKA_PATH/bin/kafka-server-stop.sh
 - $ZK_HOME/bin/zkServer.sh stop
+- $REGISTRY_HOME/bin/schema-registry-stop
