--- a/.travis.yml
+++ b/.travis.yml
@@ -59,6 +59,8 @@ before_install:
 - $REGISTRY_HOME/bin/schema-registry-start $REGISTRY_HOME/etc/schema-registry/schema-registry.properties &
 - gpm install
 
+script: go test -v -timeout 20m ./...
+
 after_script:
 - $KAFKA_PATH/bin/kafka-server-stop.sh
 - $ZK_HOME/bin/zkServer.sh stop
