--- a/consumers/consumers.properties
+++ b/consumers/consumers.properties
@@ -1,11 +1,12 @@
 #Consumer identity
 client_id=go-consumer
-group_id=stress-test-group
+group_id=cs-rebalance-group
 num_consumers=1
-topic=state
+topic=testing1
+log_level=debug
 
 #Zookeeper connection settings
-zookeeper_connect=localhost:2181
+zookeeper_connect=10.1.12.6:2181
 zookeeper_timeout=1s
 
 #workers settings
@@ -19,7 +20,7 @@ worker_task_timeout=1m
 worker_managers_stop_timeout=1m
 
 #Rebalance settings
-rebalance_barrier_timeout=10s
+rebalance_barrier_timeout=5s
 rebalance_max_retries=4
 rebalance_backoff=5s
 partition_assignment_strategy=range
