--- a/mesos/vagrant/vagrantfile
+++ b/mesos/vagrant/vagrantfile
@@ -40,6 +40,11 @@ end
 Vagrant.configure(2) do |config|
   config.vm.box = "precise64"
   config.vm.synced_folder "../../", "/vagrant"
+  # Uncomment the following code if you're unable to access internet
+  # config.vm.provider "virtualbox" do |v|
+  #   v.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
+  #   v.customize ["modifyvm", :id, "--natdnsproxy1", "on"]
+  # end
 
   config.vm.define "master" do |master|
     master.vm.provider "virtualbox" do |v|
@@ -49,15 +54,15 @@ Vagrant.configure(2) do |config|
     master.vm.hostname = "master"
     master.vm.network :private_network, ip: NODES["master"]
     # Mesos master port forwarding
-    config.vm.network "forwarded_port", guest: 5050, host: 5050
+    master.vm.network "forwarded_port", guest: 5050, host: 5050
     # Marathon port forwarding
-    config.vm.network "forwarded_port", guest: 8080, host: 8080
+    master.vm.network "forwarded_port", guest: 8080, host: 8080
     # Kafka scheduler port forwarding
-    config.vm.network "forwarded_port", guest: 7000, host: 7000
+    master.vm.network "forwarded_port", guest: 7000, host: 7000
     # Docker registry port forwarding
-    config.vm.network "forwarded_port", guest: 5000, host: 5000
+    master.vm.network "forwarded_port", guest: 5000, host: 5000
     # Zookeeper port forwarding
-    config.vm.network "forwarded_port", guest: 2181, host: 2181
+    master.vm.network "forwarded_port", guest: 2181, host: 2181
 
     master.vm.provision "shell", path: "init.sh", args: "master"
   end
@@ -71,9 +76,6 @@ Vagrant.configure(2) do |config|
 
       slave.vm.hostname = "slave#{i}"
       slave.vm.network :private_network, ip: NODES[slave.vm.hostname]
-      # Kafka port forwarding
-      config.vm.network "forwarded_port", guest: 9092, host: 9092
-
       slave.vm.provision "shell", path: "init.sh", args: "slave"
     end
   end
