--- a/mesos/vagrant/vagrantfile
+++ b/mesos/vagrant/vagrantfile
@@ -76,6 +76,7 @@ Vagrant.configure(2) do |config|
 
       slave.vm.hostname = "slave#{i}"
       slave.vm.network :private_network, ip: NODES[slave.vm.hostname]
+      slave.vm.network "forwarded_port", guest: 5051, host: 5051, auto_correct: true
       slave.vm.provision "shell", path: "init.sh", args: "slave"
     end
   end
