Fixing references for zookeeper.kafka.root - they must all be lowercase. Adding default config values to consumer.properties to help people find them.

--- a/mirrormaker/consumer.config
+++ b/mirrormaker/consumer.config
@@ -1,1 +1,5 @@
 zookeeper.connect=source:2181
+#zookeeper.kafka.root=/
+#zookeeper.connection.timeout=1
+#zookeeper.max.request.retries=3
+#zookeeper.request.backoff=150000 # time in milliseconds
