--- a/Dockerfile.mirrormaker
+++ b/Dockerfile.mirrormaker
@@ -3,12 +3,11 @@ MAINTAINER Michael Nikitochkin <nikitochkin.michael@gmail.com>
 RUN        apt-get -qy update && \
            rm -rf /var/lib/apt/lists/*
 
-RUN        wget https://raw.githubusercontent.com/pote/gpm/v1.3.2/bin/gpm && chmod +x gpm && mv gpm /usr/local/bin
+ADD        . /go/src/github.com/elodina/go_kafka_client
+WORKDIR    /go/src/github.com/elodina/go_kafka_client
 
-ADD        . /go/src/github.com/stealthly/go_kafka_client
-WORKDIR    /go/src/github.com/stealthly/go_kafka_client
-
-RUN        gpm install
+RUN        go get github.com/tools/godep
+RUN        godep restore
 RUN        go install -v ./mirrormaker
 
 VOLUME     /mirrormaker
